--- a/src/lib/template/11_board.tmpl
+++ b/src/lib/template/11_board.tmpl
@@ -23,7 +23,7 @@
         <% if ( post.number == thread.opPost.number && thread.closed ) %>
             <img src="/<%= sitePathPrefix %>img/closed.png" title="<%= closedText %>">
         <% end %>
-        <% if ( post.subjectAlwaysRaw ) %>
+        <% if ( post.subjectIsRaw ) %>
             <%= post.subject | raw %>
         <% else %>
             <b><%= post.subject %></b>
