--- a/src/lib/template/02_base_board.tmpl
+++ b/src/lib/template/02_base_board.tmpl
@@ -26,7 +26,7 @@
 <% end %>
 <% end template %>
 
-<% template customPostFormField(std::string position) %>
+<% template customPostFormField(std::string) %>
 <% end template %>
 
 <% template createAction(std::string position) %>
