--- a/src/lib/template/02_base_board.tmpl
+++ b/src/lib/template/02_base_board.tmpl
@@ -166,7 +166,11 @@
 <% else %>
     <input type="hidden" id="moder" value="false" />
 <% end %>
-<input type="hidden" id="postingEnabled" value="<%= postingEnabled %>" />
+<% if ( content.postingEnabled ) %>
+    <input type="hidden" id="postingEnabled" value="true" />
+<% else %>
+    <input type="hidden" id="postingEnabled" value="false" />
+<% end %>
 <input type="hidden" id="currentBoardName" value="<%= currentBoard.name %>" />
 <input type="hidden" id="currentBoardTitle" value="<%= currentBoard.title %>" />
 <input type="hidden" id="editPostText" value="<%= editPostText %>" />
@@ -212,6 +216,20 @@
         <img name="whois" style="display: none;">
         <span name="dateTime"></span>
         #<span name="number"></span>
+        <span name="permanent" style="display: none;">
+            <span name="moder">
+                <a name="editButton" href="javascript:editPost('<%= currentBoard.name %>', '%postNumber%');">
+                    <img src="/<%= sitePathPrefix %>img/edit.png" title="<%= editPostText %>" /></a>
+                <a name="banButton" href="javascript:banUser('<%= currentBoard.name %>', '%postNumber%');">
+                    <img src="/<%= sitePathPrefix %>img/ban.png" title="<%= banUserText %>" /></a>
+                <input id="post%postNumber%RawText" name="rawText" type="hidden" value="" />
+            </span>
+            <a name="deleteButton" href="javascript:deletePost('<%= currentBoard.name %>', '%postNumber%', true);">
+                <img src="/<%= sitePathPrefix %>img/delete.png" title="<%= deletePostText %>" /></a>
+            <a id="hidePost%postNumber%" name="hideButton"
+               href="javascript:setPostHidden('<%= currentBoard.name %>', '%postNumber%', %hide%);">
+                <img src="/<%= sitePathPrefix %>img/hide.png" title="<%= showHidePostText %>" /></a>
+        </span>
     </div>
     <table class="threadPost">
         <tbody>
