Improve post loading

--- a/src/lib/template/02_base_board.tmpl
+++ b/src/lib/template/02_base_board.tmpl
@@ -215,7 +215,7 @@
         <span name="tripcode" class="tripcode" style="display: none;"></span>
         <img name="whois" style="display: none;">
         <span name="dateTime"></span>
-        #<span name="number"></span>
+        #<a name="number"></a>
         <span name="permanent" style="display: none;">
             <span name="moder">
                 <a name="editButton" href="javascript:editPost('<%= currentBoard.name %>', '%postNumber%');">
