--- a/src/lib/template/12_thread.tmpl
+++ b/src/lib/template/12_thread.tmpl
@@ -180,6 +180,7 @@
         <% else %>
             <input id="lastPostNumber" type="hidden" value="<%= opPost.number %>" />
         <% end %>
+        <input id="currentThreadNumber" type="hidden" value="<%= opPost.number %>" />
         <a id="top"></a>
         <% include settings() %>
         <br />
