--- a/src/lib/template/12_thread.tmpl
+++ b/src/lib/template/12_thread.tmpl
@@ -76,30 +76,34 @@
             <% end %>
         <% end %>
         <% if ( content.moder ) %>
-            <a href="javascript:editPost('<%= currentBoard.name %>', '<%= post.number %>');">
+            <a name="editButton" href="javascript:editPost('<%= currentBoard.name %>', '<%= post.number %>');">
                 <img src="/<%= sitePathPrefix %>img/edit.png" title="<%= editPostText %>" /></a>
         <% end %>
         <% if ( content.moder && op ) %>
             <% if ( content.fixed ) %>
-                <a href="javascript:setThreadFixed('<%= currentBoard.name %>', '<%= post.number %>', false);">
+                <a name="fixButton"
+                   href="javascript:setThreadFixed('<%= currentBoard.name %>', '<%= post.number %>', false);">
                     <img src="/<%= sitePathPrefix %>img/unfix.png" title="<%= unfixThreadText %>" /></a>
             <% else %>
-                <a href="javascript:setThreadFixed('<%= currentBoard.name %>', '<%= post.number %>', true);">
+                <a name="fixButton"
+                   href="javascript:setThreadFixed('<%= currentBoard.name %>', '<%= post.number %>', true);">
                     <img src="/<%= sitePathPrefix %>img/fixed.png" title="<%= fixThreadText %>" /></a>
             <% end %>
             <% if ( content.closed ) %>
-                <a href="javascript:setThreadOpened('<%= currentBoard.name %>', '<%= post.number %>', true);">
+                <a name="closeButton"
+                   href="javascript:setThreadOpened('<%= currentBoard.name %>', '<%= post.number %>', true);">
                     <img src="/<%= sitePathPrefix %>img/open.png" title="<%= openThreadText %>" /></a>
             <% else %>
-                <a href="javascript:setThreadOpened('<%= currentBoard.name %>', '<%= post.number %>', false);">
+                <a name="closeButton"
+                   href="javascript:setThreadOpened('<%= currentBoard.name %>', '<%= post.number %>', false);">
                     <img src="/<%= sitePathPrefix %>img/closed.png" title="<%= closeThreadText %>" /></a>
             <% end %>
         <% end %>
         <% if ( content.moder ) %>
-            <a href="javascript:banUser('<%= currentBoard.name %>', '<%= post.number %>');">
+            <a name="banButton" href="javascript:banUser('<%= currentBoard.name %>', '<%= post.number %>');">
                 <img src="/<%= sitePathPrefix %>img/ban.png" title="<%= banUserText %>" /></a>
         <% end %>
-        <a href="javascript:deletePost('<%= currentBoard.name %>', '<%= post.number %>', true);">
+        <a name="deleteButton" href="javascript:deletePost('<%= currentBoard.name %>', '<%= post.number %>', true);">
         <% if ( op ) %>
             <img src="/<%= sitePathPrefix %>img/delete.png" title="<%= deleteThreadText %>" /></a>
         <% else %>
@@ -107,21 +111,21 @@
         <% end %>
         <% if ( op ) %>
             <% if ( content.hidden ) %>
-                <a id="hidePost<%= post.number %>"
+                <a name="hideButton" id="hidePost<%= post.number %>"
                    href="javascript:setThreadHidden('<%= currentBoard.name %>', '<%= post.number %>', false);">
                     <img src="/<%= sitePathPrefix %>img/hide.png" title="<%= showHidePostText %>" /></a>
             <% else %>
-                <a id="hidePost<%= post.number %>"
+                <a name="hideButton" id="hidePost<%= post.number %>"
                    href="javascript:setThreadHidden('<%= currentBoard.name %>', '<%= post.number %>', true);">
                     <img src="/<%= sitePathPrefix %>img/hide.png" title="<%= showHidePostText %>" /></a>
             <% end %>
         <% else %>
             <% if ( post.hidden ) %>
-                <a id="hidePost<%= post.number %>"
+                <a name="hideButton" id="hidePost<%= post.number %>"
                    href="javascript:setPostHidden('<%= currentBoard.name %>', '<%= post.number %>', false);">
                     <img src="/<%= sitePathPrefix %>img/hide.png" title="<%= showHidePostText %>" /></a>
             <% else %>
-                <a id="hidePost<%= post.number %>"
+                <a name="hideButton" id="hidePost<%= post.number %>"
                    href="javascript:setPostHidden('<%= currentBoard.name %>', '<%= post.number %>', true);">
                     <img src="/<%= sitePathPrefix %>img/hide.png" title="<%= showHidePostText %>" /></a>
             <% end %>
