--- a/src/lib/template/02_base_board.tmpl
+++ b/src/lib/template/02_base_board.tmpl
@@ -1,4 +1,6 @@
 <% c++ #include "controller/baseboard.h" %>
+<% c++ #include "controller/board.h" %>
+<% c++ #include "controller/thread.h" %>
 <% skin my_skin %>
 <% view base_board uses Content::BaseBoard extends base %>
 
@@ -158,6 +160,178 @@
         </a>
     </div>
 </td>
+<% end template %>
+
+<% template post(Content::BaseBoard::Post post, Content::Board::ThreadPointer thread) %>
+<% if ( post.number == post.threadNumber ) %>
+    <% if ( post.hidden ) %>
+        <div id="post<%= post.number %>" class="opPost hiddenPost">
+    <% else %>
+        <div id="post<%= post.number %>" class="opPost">
+    <% end %>
+<% else %>
+    <% if ( post.hidden ) %>
+        <div id="post<%= post.number %>" class="post hiddenPost">
+    <% else %>
+        <div id="post<%= post.number %>" class="post">
+    <% end %>
+<% end %>
+    <div class="postHeader">
+        <% if ( !thread ) %>
+            <a id="<%= post.number %>"></a>
+        <% end %>
+        <% if ( post.number == post.threadNumber ) %>
+            <% if ( (thread && thread->fixed) || (!thread && dynamic_cast<Content::Thread *>(&content)->fixed) ) %>
+                <img src="/<%= sitePathPrefix %>img/fixed.png" title="<%= fixedText %>">
+            <% end %>
+            <% if ( (thread && thread->fixed) || (!thread && dynamic_cast<Content::Thread *>(&content)->closed) ) %>
+                <img src="/<%= sitePathPrefix %>img/closed.png" title="<%= closedText %>">
+            <% end %>
+        <% end %>
+        <% if ( post.subjectIsRaw ) %>
+            <%= post.subject | raw %>
+        <% else %>
+            <b><%= post.subject %></b>
+        <% end %>
+        <% if ( post.showRegistered && post.showTripcode ) %>
+            <img src="/<%= sitePathPrefix %>img/registered.png" title="<%= registeredText %>">
+        <% end %>
+        <% if ( !post.email.empty() ) %>
+            <a href="mailto:<%= post.email %>"><%= post.nameRaw %></a>
+        <% else %>
+            <%= post.name | raw %>
+        <% end %>
+        <% if ( post.showRegistered && !post.tripcode.empty() && post.showTripcode ) %>
+            <span class="tripcode"><%= post.tripcode %></span>
+        <% end %>
+        <% if ( content.showWhois && !post.flagName.empty() ) %>
+            <% if ( !post.cityName.empty() ) %>
+                <img src="/<%= sitePathPrefix %>img/flag/<%= post.flagName %>"
+                     title="<%= post.countryName %>: <%= post.cityName %>">
+            <% else %>
+                <img src="/<%= sitePathPrefix %>img/flag/<%= post.flagName %>" title="<%= post.countryName %>">
+            <% end %>
+        <% end %>
+        <%= post.dateTime %>
+        <% if ( content.postingEnabled ) %>
+            <% if ( thread ) %>
+                <% if ( content.moder ) %>
+                    #<a href="/<%= sitePathPrefix %><%= currentBoard.name %>/thread/<%= thread->opPost.number %>.html#i<%= post.number %>"
+                        title="<%= post.ip %>"><%= post.number %></a>
+                <% else %>
+                    #<a href="/<%= sitePathPrefix %><%= currentBoard.name %>/thread/<%= thread->opPost.number %>.html#i<%= post.number %>"><%= post.number %></a>
+                <% end %>
+            <% else %>
+                <% if ( content.moder ) %>
+                    #<a href="javascript:insertPostNumber(<%= post.number %>);"
+                        title="<%= post.ip %>"><%= post.number %></a>
+                <% else %>
+                    #<a href="javascript:insertPostNumber(<%= post.number %>);"><%= post.number %></a>
+                <% end %>
+            <% end %>
+        <% else %>
+            <% if ( thread ) %>
+                <% if ( content.moder ) %>
+                    #<a href="/<%= sitePathPrefix %><%= currentBoard.name %>/thread/<%= thread->opPost.number %>.html#<%= post.number %>"
+                        title="<%= post.ip %>"><%= post.number %></a>
+                <% else %>
+                    #<a href="/<%= sitePathPrefix %><%= currentBoard.name %>/thread/<%= thread->opPost.number %>.html#<%= post.number %>"><%= post.number %></a>
+                <% end %>
+            <% else %>
+                <% if ( content.moder ) %>
+                    #<a href="#<%= post.number %>" title="<%= post.ip %>"><%= post.number %></a>
+                <% else %>
+                    #<a href="#<%= post.number %>"><%= post.number %></a>
+                <% end %>
+            <% end %>
+        <% end %>
+        <% if ( content.moder ) %>
+            <a name="editButton" href="javascript:editPost('<%= currentBoard.name %>', '<%= post.number %>');">
+                <img src="/<%= sitePathPrefix %>img/edit.png" title="<%= editPostText %>" /></a>
+        <% end %>
+        <% if ( content.moder && post.number == post.threadNumber ) %>
+            <% if ( (thread && thread->fixed) || (!thread && dynamic_cast<Content::Thread *>(&content)->fixed) ) %>
+                <a name="fixButton"
+                   href="javascript:setThreadFixed('<%= currentBoard.name %>', '<%= post.number %>', false);">
+                    <img src="/<%= sitePathPrefix %>img/unfix.png" title="<%= unfixThreadText %>" /></a>
+            <% else %>
+                <a name="fixButton"
+                   href="javascript:setThreadFixed('<%= currentBoard.name %>', '<%= post.number %>', true);">
+                    <img src="/<%= sitePathPrefix %>img/fixed.png" title="<%= fixThreadText %>" /></a>
+            <% end %>
+            <% if ( (thread && thread->closed) || (!thread && dynamic_cast<Content::Thread *>(&content)->closed) ) %>
+                <a name="closeButton"
+                   href="javascript:setThreadOpened('<%= currentBoard.name %>', '<%= post.number %>', true);">
+                    <img src="/<%= sitePathPrefix %>img/open.png" title="<%= openThreadText %>" /></a>
+            <% else %>
+                <a name="closeButton"
+                   href="javascript:setThreadOpened('<%= currentBoard.name %>', '<%= post.number %>', false);">
+                    <img src="/<%= sitePathPrefix %>img/closed.png" title="<%= closeThreadText %>" /></a>
+            <% end %>
+        <% end %>
+        <% if ( content.moder ) %>
+            <a name="banButton" href="javascript:banUser('<%= currentBoard.name %>', '<%= post.number %>');">
+                <img src="/<%= sitePathPrefix %>img/ban.png" title="<%= banUserText %>" /></a>
+        <% end %>
+        <a name="deleteButton" href="javascript:deletePost('<%= currentBoard.name %>', '<%= post.number %>', true);">
+        <% if ( post.number == post.threadNumber ) %>
+            <img src="/<%= sitePathPrefix %>img/delete.png" title="<%= deleteThreadText %>" /></a>
+        <% else %>
+            <img src="/<%= sitePathPrefix %>img/delete.png" title="<%= deletePostText %>" /></a>
+        <% end %>
+        <% if ( post.number == post.threadNumber ) %>
+            <% if ( (thread && thread->hidden) || (!thread && dynamic_cast<Content::Thread *>(&content)->hidden) ) %>
+                <a name="hideButton" id="hidePost<%= post.number %>"
+                   href="javascript:setThreadHidden('<%= currentBoard.name %>', '<%= post.number %>', false);">
+                    <img src="/<%= sitePathPrefix %>img/hide.png" title="<%= showHidePostText %>" /></a>
+            <% else %>
+                <a name="hideButton" id="hidePost<%= post.number %>"
+                   href="javascript:setThreadHidden('<%= currentBoard.name %>', '<%= post.number %>', true);">
+                    <img src="/<%= sitePathPrefix %>img/hide.png" title="<%= showHidePostText %>" /></a>
+            <% end %>
+        <% else %>
+            <% if ( post.hidden ) %>
+                <a name="hideButton" id="hidePost<%= post.number %>"
+                   href="javascript:setPostHidden('<%= currentBoard.name %>', '<%= post.number %>', false);">
+                    <img src="/<%= sitePathPrefix %>img/hide.png" title="<%= showHidePostText %>" /></a>
+            <% else %>
+                <a name="hideButton" id="hidePost<%= post.number %>"
+                   href="javascript:setPostHidden('<%= currentBoard.name %>', '<%= post.number %>', true);">
+                    <img src="/<%= sitePathPrefix %>img/hide.png" title="<%= showHidePostText %>" /></a>
+            <% end %>
+        <% end %>
+        <% if ( thread && post.number == post.threadNumber ) %>
+            [<a href="/<%= sitePathPrefix %><%= currentBoard.name %>/thread/<%= post.number %>.html"><%= toThread %></a>]
+            <% if ( thread->postLimitReached() ) %>
+                <span class="postLimitReached"><%= postLimitReachedText %></span>
+            <% elif ( thread->bumpLimitReached() ) %>
+                <span class="bumpLimitReached"><%= bumpLimitReachedText %></span>
+            <% end %>
+        <% end %>
+    </div>
+    <table class="threadPost">
+        <tbody>
+            <tr>
+                <%foreach file in post.files %>
+                    <% item %>
+                        <% include postFile(file) %>
+                    <% end %>
+                <% end %>
+                <input id="post<%= post.number %>RawText" type="hidden" value="<%= post.rawPostText %>" />
+                <td class="postText">
+                    <blockquote id="post<%= post.number %>Text"><%= post.text | raw %></blockquote>
+                </td>
+            </tr>
+            <tr>
+                <td colspan="2">
+                    <% if ( post.bannedFor ) %>
+                        <span class="bannedFor"><%= bannedForText %></span>
+                    <% end %>
+                <td>
+            </tr>
+        </tbody>
+    </table>
+</div>
 <% end template %>
 
 <% template boardTexts() %>
