--- a/src/lib/template/12_thread.tmpl
+++ b/src/lib/template/12_thread.tmpl
@@ -14,236 +14,102 @@
 </div>
 <% end template %>
 
-<% template post(Content::BaseBoard::Post post, bool op) %>
-<% if ( op ) %>
-    <% if ( content.hidden ) %>
-        <div id="post<%= post.number %>" class="opPost hiddenPost">
-    <% else %>
-        <div id="post<%= post.number %>" class="opPost">
-    <% end %>
+<% template head() %>
+<% include baseHead() %>
+<% include settingsHead() %>
+<% include navbarHead() %>
+<% include bannerHead() %>
+<% include createActionHead() %>
+<% include boardHead() %>
+<% include searchActionHead() %>
+<% include titleHead() %>
+<link rel="stylesheet" type="text/css" href="/<%= sitePathPrefix %>css/thread.css">
+<script type="text/javascript" src="/<%= sitePathPrefix %>js/thread.js"></script>
+<% end template %>
+
+<% template body() %>
+<% include baseTexts() %>
+<% include settingsTexts() %>
+<% include boardTexts() %>
+<% include navigationButton("bottom") %>
+<% include navigationButton("top") %>
+<input id="noNewPostsText" type="hidden" value="<%= noNewPostsText %>" />
+<input id="newPostsText" type="hidden" value="<%= newPostsText %>" />
+<% if ( !content.posts.empty() ) %>
+    <input id="lastPostNumber" type="hidden" value="<%= posts.back().number %>" />
 <% else %>
-    <% if ( post.hidden ) %>
-        <div id="post<%= post.number %>" class="post hiddenPost">
+    <input id="lastPostNumber" type="hidden" value="<%= opPost.number %>" />
+<% end %>
+<input id="currentThreadNumber" type="hidden" value="<%= opPost.number %>" />
+<a id="top"></a>
+<% include settings() %>
+<br />
+<% include navbar() %>
+<% if ( !content.searchApiKey.empty() ) %>
+    <br />
+<% end %>
+<% include searchAction("Top") %>
+<% if ( !content.bannerFileName.empty() ) %>
+    <br />
+<% end %>
+<% include banner() %>
+<div class="theTitle">
+    <% if ( !content.pageTitle.empty() ) %>
+        <h1><%= pageTitle %></h1>
     <% else %>
-        <div id="post<%= post.number %>" class="post">
+        <h1><%= currentBoard.title %> - <%= currentThread %></h1>
+    <% end %>
+</div>
+<% if ( !content.postingEnabled ) %>
+    <div class="theMessage">
+        <h2><%= postingDisabledText %></h2>
+    </div>
+<% elif ( content.postLimitReached() ) %>
+    <div class="theMessage">
+        <h2><%= postLimitReachedText %></h2>
+    </div>
+<% else %>
+    <hr />
+<% end %>
+<% if ( !content.postLimitReached() && content.bumpLimitReached() ) %>
+    <div class="theMessage">
+        <h3><%= bumpLimitReachedText %></h3>
+    </div>
+<% end %>
+<% include createAction("Top") %>
+<hr />
+<% include threadActions("top") %>
+<hr />
+<% include post(opPost, 0) %>
+<% foreach p in posts %>
+    <% item %>
+        <% include post(p, 0) %>
     <% end %>
 <% end %>
-    <div class="postHeader">
-        <a id="<%= post.number %>"></a>
-        <% if ( op && content.fixed ) %>
-            <img src="/<%= sitePathPrefix %>img/fixed.png" title="<%= fixedText %>">
-        <% end %>
-        <% if ( op && content.closed ) %>
-            <img src="/<%= sitePathPrefix %>img/closed.png" title="<%= closedText %>">
-        <% end %>
-        <% if ( post.subjectIsRaw ) %>
-            <%= post.subject | raw %>
-        <% else %>
-            <b><%= post.subject %></b>
-        <% end %>
-        <% if ( post.showRegistered && post.showTripcode ) %>
-            <img src="/<%= sitePathPrefix %>img/registered.png" title="<%= registeredText %>">
-        <% end %>
-        <% if ( !post.email.empty() ) %>
-            <a href="mailto:<%= post.email %>"><%= post.nameRaw %></a>
-        <% else %>
-            <%= post.name | raw %>
-        <% end %>
-        <% if ( post.showRegistered && !post.tripcode.empty() && post.showTripcode ) %>
-            <span class="tripcode"><%= post.tripcode %></span>
-        <% end %>
-        <% if ( content.showWhois && !post.flagName.empty() ) %>
-            <% if ( !post.cityName.empty() ) %>
-                <img src="/<%= sitePathPrefix %>/img/flag/<%= post.flagName %>"
-                     title="<%= post.countryName %>: <%= post.cityName %>">
-            <% else %>
-                <img src="/<%= sitePathPrefix %>/img/flag/<%= post.flagName %>" title="<%= post.countryName %>">
-            <% end %>
-        <% end %>
-        <%= post.dateTime %>
-        <% if ( content.postingEnabled ) %>
-            <% if ( content.moder ) %>
-                #<a href="javascript:insertPostNumber(<%= post.number %>);"
-                    title="<%= post.ip %>"><%= post.number %></a>
-            <% else %>
-                #<a href="javascript:insertPostNumber(<%= post.number %>);"><%= post.number %></a>
-            <% end %>
-        <% else %>
-            <% if ( content.moder ) %>
-                #<a href="#<%= post.number %>" title="<%= post.ip %>"><%= post.number %></a>
-            <% else %>
-                #<a href="#<%= post.number %>"><%= post.number %></a>
-            <% end %>
-        <% end %>
-        <% if ( content.moder ) %>
-            <a name="editButton" href="javascript:editPost('<%= currentBoard.name %>', '<%= post.number %>');">
-                <img src="/<%= sitePathPrefix %>img/edit.png" title="<%= editPostText %>" /></a>
-        <% end %>
-        <% if ( content.moder && op ) %>
-            <% if ( content.fixed ) %>
-                <a name="fixButton"
-                   href="javascript:setThreadFixed('<%= currentBoard.name %>', '<%= post.number %>', false);">
-                    <img src="/<%= sitePathPrefix %>img/unfix.png" title="<%= unfixThreadText %>" /></a>
-            <% else %>
-                <a name="fixButton"
-                   href="javascript:setThreadFixed('<%= currentBoard.name %>', '<%= post.number %>', true);">
-                    <img src="/<%= sitePathPrefix %>img/fixed.png" title="<%= fixThreadText %>" /></a>
-            <% end %>
-            <% if ( content.closed ) %>
-                <a name="closeButton"
-                   href="javascript:setThreadOpened('<%= currentBoard.name %>', '<%= post.number %>', true);">
-                    <img src="/<%= sitePathPrefix %>img/open.png" title="<%= openThreadText %>" /></a>
-            <% else %>
-                <a name="closeButton"
-                   href="javascript:setThreadOpened('<%= currentBoard.name %>', '<%= post.number %>', false);">
-                    <img src="/<%= sitePathPrefix %>img/closed.png" title="<%= closeThreadText %>" /></a>
-            <% end %>
-        <% end %>
-        <% if ( content.moder ) %>
-            <a name="banButton" href="javascript:banUser('<%= currentBoard.name %>', '<%= post.number %>');">
-                <img src="/<%= sitePathPrefix %>img/ban.png" title="<%= banUserText %>" /></a>
-        <% end %>
-        <a name="deleteButton" href="javascript:deletePost('<%= currentBoard.name %>', '<%= post.number %>', true);">
-        <% if ( op ) %>
-            <img src="/<%= sitePathPrefix %>img/delete.png" title="<%= deleteThreadText %>" /></a>
-        <% else %>
-            <img src="/<%= sitePathPrefix %>img/delete.png" title="<%= deletePostText %>" /></a>
-        <% end %>
-        <% if ( op ) %>
-            <% if ( content.hidden ) %>
-                <a name="hideButton" id="hidePost<%= post.number %>"
-                   href="javascript:setThreadHidden('<%= currentBoard.name %>', '<%= post.number %>', false);">
-                    <img src="/<%= sitePathPrefix %>img/hide.png" title="<%= showHidePostText %>" /></a>
-            <% else %>
-                <a name="hideButton" id="hidePost<%= post.number %>"
-                   href="javascript:setThreadHidden('<%= currentBoard.name %>', '<%= post.number %>', true);">
-                    <img src="/<%= sitePathPrefix %>img/hide.png" title="<%= showHidePostText %>" /></a>
-            <% end %>
-        <% else %>
-            <% if ( post.hidden ) %>
-                <a name="hideButton" id="hidePost<%= post.number %>"
-                   href="javascript:setPostHidden('<%= currentBoard.name %>', '<%= post.number %>', false);">
-                    <img src="/<%= sitePathPrefix %>img/hide.png" title="<%= showHidePostText %>" /></a>
-            <% else %>
-                <a name="hideButton" id="hidePost<%= post.number %>"
-                   href="javascript:setPostHidden('<%= currentBoard.name %>', '<%= post.number %>', true);">
-                    <img src="/<%= sitePathPrefix %>img/hide.png" title="<%= showHidePostText %>" /></a>
-            <% end %>
-        <% end %>
-    </div>
-    <table class="threadPost">
-        <tbody>
-            <tr>
-                <%foreach file in post.files %>
-                    <% item %>
-                        <% include postFile(file) %>
-                    <% end %>
-                <% end %>
-                <input id="post<%= post.number %>RawText" type="hidden" value="<%= post.rawPostText %>" />
-                <td class="postText">
-                    <blockquote id="post<%= post.number %>Text"><%= post.text | raw %></blockquote>
-                </td>
-            </tr>
-            <tr>
-                <td colspan="2">
-                    <% if ( post.bannedFor ) %>
-                        <span class="bannedFor"><%= bannedForText %></span>
-                    <% end %>
-                <td>
-            </tr>
-        </tbody>
-    </table>
-</div>
+<input id="afterAllPosts" type="hidden" />
+<hr />
+<% include threadActions("bottom") %>
+<% if ( content.postingEnabled && !content.postLimitReached() ) %>
+    <hr />
+<% end %>
+<% include createAction("Bottom") %>
+<hr />
+<% include navbar() %>
+<% if ( !content.searchApiKey.empty() ) %>
+    <br />
+<% end %>
+<% include searchAction("Bottom") %>
+<a id="bottom"></a>
 <% end template %>
 
 <% template render() %>
 <!DOCTYPE html>
 <html xmlns="http://www.w3.org/1999/xhtml">
     <head>
-        <% include baseHead() %>
-        <% include settingsHead() %>
-        <% include navbarHead() %>
-        <% include bannerHead() %>
-        <% include createActionHead() %>
-        <% include boardHead() %>
-        <% include searchActionHead() %>
-        <% include titleHead() %>
-        <link rel="stylesheet" type="text/css" href="/<%= sitePathPrefix %>css/thread.css">
-        <script type="text/javascript" src="/<%= sitePathPrefix %>js/thread.js"></script>
+        <% include head() %>
     </head>
     <body onload="javascript:initializeOnLoadSettings(); initializeOnLoadThread();">
-        <% include baseTexts() %>
-        <% include settingsTexts() %>
-        <% include boardTexts() %>
-        <% include navigationButton("bottom") %>
-        <% include navigationButton("top") %>
-        <input id="noNewPostsText" type="hidden" value="<%= noNewPostsText %>" />
-        <input id="newPostsText" type="hidden" value="<%= newPostsText %>" />
-        <% if ( !content.posts.empty() ) %>
-            <input id="lastPostNumber" type="hidden" value="<%= posts.back().number %>" />
-        <% else %>
-            <input id="lastPostNumber" type="hidden" value="<%= opPost.number %>" />
-        <% end %>
-        <input id="currentThreadNumber" type="hidden" value="<%= opPost.number %>" />
-        <a id="top"></a>
-        <% include settings() %>
-        <br />
-        <% include navbar() %>
-        <% if ( !content.searchApiKey.empty() ) %>
-            <br />
-        <% end %>
-        <% include searchAction("Top") %>
-        <% if ( !content.bannerFileName.empty() ) %>
-            <br />
-        <% end %>
-        <% include banner() %>
-        <div class="theTitle">
-            <% if ( !content.pageTitle.empty() ) %>
-                <h1><%= pageTitle %></h1>
-            <% else %>
-                <h1><%= currentBoard.title %> - <%= currentThread %></h1>
-            <% end %>
-        </div>
-        <% if ( !content.postingEnabled ) %>
-            <div class="theMessage">
-                <h2><%= postingDisabledText %></h2>
-            </div>
-        <% elif ( content.postLimitReached() ) %>
-            <div class="theMessage">
-                <h2><%= postLimitReachedText %></h2>
-            </div>
-        <% else %>
-            <hr />
-        <% end %>
-        <% if ( !content.postLimitReached() && content.bumpLimitReached() ) %>
-            <div class="theMessage">
-                <h3><%= bumpLimitReachedText %></h3>
-            </div>
-        <% end %>
-        <% include createAction("Top") %>
-        <hr />
-        <% include threadActions("top") %>
-        <hr />
-        <% include post(opPost, 1) %>
-        <% foreach p in posts %>
-            <% item %>
-                <% include post(p, 0) %>
-            <% end %>
-        <% end %>
-        <input id="afterAllPosts" type="hidden" />
-        <hr />
-        <% include threadActions("bottom") %>
-        <% if ( content.postingEnabled && !content.postLimitReached() ) %>
-            <hr />
-        <% end %>
-        <% include createAction("Bottom") %>
-        <hr />
-        <% include navbar() %>
-        <% if ( !content.searchApiKey.empty() ) %>
-            <br />
-        <% end %>
-        <% include searchAction("Bottom") %>
-        <a id="bottom"></a>
+        <% include body() %>
     </body>
 </html>
 <% end template %>
