Fix post loading at /int/

--- a/src/lib/template/02_base_board.tmpl
+++ b/src/lib/template/02_base_board.tmpl
@@ -389,7 +389,7 @@
              style="display: none;">
         <span name="name"></span>
         <span name="tripcode" class="tripcode" style="display: none;"></span>
-        <img name="whois" style="display: none;">
+        <img name="whois" src="/<%= sitePathPrefix %>img/flag/%flagName%" style="display: none;">
         <span name="dateTime"></span>
         #<a name="number"></a>
         <span name="permanent" style="display: none;">
