Fix AJAX-loaded multi-file posts

--- a/src/lib/template/02_base_board.tmpl
+++ b/src/lib/template/02_base_board.tmpl
@@ -442,12 +442,17 @@
     <table class="threadPost">
         <tbody>
             <tr name="files">
-                <td class="postText">
-                    <blockquote name="text"></blockquote>
+                <td name="oneFileTd" class="postText">
+                    <blockquote name="textOneFile"></blockquote>
                 </td>
             </tr>
+            <tr name="manyFilesTr">
+                <td name="manyFilesTd" class="postText">
+                    <blockquote name="textManyFiles"></blockquote>
+                </td>
             <tr>
-                <td colspan="2">
+            <tr>
+                <td name="bannedForTd" colspan="2">
                     <span name="bannedFor" class="bannedFor" style="display: none;"><%= bannedForText %></span>
                 <td>
             </tr>
