--- a/src/lib/template/02_base_board.tmpl
+++ b/src/lib/template/02_base_board.tmpl
@@ -327,7 +327,7 @@
                         <blockquote id="post<%= post.number %>Text"><%= post.text | raw %></blockquote>
                     </td>
                 <% else %>
-                    <td></td>
+                    <td class="shrink"></td>
                 <% end %>
             </tr>
             <% if ( post.files.size() >= 2 ) %>
