--- a/src/lib/template/11_board.tmpl
+++ b/src/lib/template/11_board.tmpl
@@ -98,6 +98,7 @@
         <% include boardTexts() %>
         <% include navigationButton("bottom") %>
         <% include navigationButton("top") %>
+        <iframe id="kostyleeque" name="kostyleeque" style="display: none;" onload="posted();"></iframe>
         <a id="top"></a>
         <% include settings() %>
         <br />
