--- a/src/lib/template/12_thread.tmpl
+++ b/src/lib/template/12_thread.tmpl
@@ -43,6 +43,7 @@
 <input id="noNewPostsText" type="hidden" value="<%= noNewPostsText %>" />
 <input id="newPostsText" type="hidden" value="<%= newPostsText %>" />
 <input id="currentThreadNumber" type="hidden" value="<%= opPost.number %>" />
+<iframe id="kostyleeque" name="kostyleeque" style="display: none;" onload="posted();"></iframe>
 <a id="top"></a>
 <% include settings() %>
 <br />
