Implement movable images

--- a/src/lib/static/css/post.css
+++ b/src/lib/static/css/post.css
@@ -90,3 +90,9 @@
 .navigationButtonBottom {
     top: 30px;
 }
+
+.movableImage {
+    position: fixed;
+    z-index: 9905;
+    border: 5px solid #777777;
+}
