Improve file info storage; fix image scaling

--- a/src/lib/template/02_base_board.tmpl
+++ b/src/lib/template/02_base_board.tmpl
@@ -146,7 +146,7 @@
         (<%= file.size %>)
     </div>
     <div>
-        <% if ( file.isWebm ) %>
+        <% if ( "webm" == file.type ) %>
             <a href="/<%= sitePathPrefix %><%= currentBoard.name %>/<%= file.sourceName %>">
         <% else %>
             <a href="/<%= sitePathPrefix %><%= currentBoard.name %>/<%= file.sourceName %>"
