--- a/src/lib/template/02_base_board.tmpl
+++ b/src/lib/template/02_base_board.tmpl
@@ -324,6 +324,9 @@
                     <% end %>
                 <% end %>
                 <input id="post<%= post.number %>RawText" type="hidden" value="<%= post.rawPostText %>" />
+                <input name="email" type="hidden" value="<%= post.email %>" />
+                <input name="name" type="hidden" value="<%= post.rawName %>" />
+                <input name="subject" type="hidden" value="<%= post.rawSubject %>" />
                 <% if ( post.files.size() < 2 ) %>
                     <td class="postText">
                         <blockquote id="post<%= post.number %>Text"><%= post.text | raw %></blockquote>
@@ -429,6 +432,9 @@
                 <a name="banButton" href="javascript:banUser('<%= currentBoard.name %>', '%postNumber%');">
                     <img src="/<%= sitePathPrefix %>img/ban.png" title="<%= banUserText %>" /></a>
                 <input id="post%postNumber%RawText" name="rawText" type="hidden" value="" />
+                <input name="email" type="hidden" value="%email%" />
+                <input name="name" type="hidden" value="%rawName%" />
+                <input name="subject" type="hidden" value="%rawSubject%" />
             </span>
             <a name="deleteButton" href="javascript:deletePost('<%= currentBoard.name %>', '%postNumber%', true);">
                 <img src="/<%= sitePathPrefix %>img/delete.png" title="<%= deletePostText %>" /></a>
@@ -461,6 +467,45 @@
         </tbody>
     </table>
 </div>
+
+
+<table id="editPostTemplate" class="postFormTable" style="display: none;">
+    <tbody>
+        <tr>
+            <td class="postformLabel">
+                <b><%= postFormLabelEmail %></b>
+            </td>
+            <td class="postformField">
+                <input type="text" maxlength="<%= maxEmailLength %>" name="email" size="30" />
+            </td>
+        </tr>
+        <tr>
+            <td class="postformLabel">
+                <b><%= postFormLabelName %></b>
+            </td>
+            <td class="postformField">
+                <input type="text" maxlength="<%= maxNameLength %>" name="name" size="43" />
+            </td>
+        </tr>
+        <tr>
+            <td class="postformLabel">
+                <b><%= postFormLabelSubject %></b>
+            </td>
+            <td class="postformField">
+                <input type="text" maxlength="<%= maxSubjectLength %>" name="subject" size="43" />
+            </td>
+        </tr>
+        <tr>
+            <td class="postformLabel">
+                <b><%= postFormInputText %></b>
+            </td>
+            <td class="postformField">
+                <textarea name="text" rows="10" cols="43" placeholder="<%= postFormInputTextPlaceholder %>"
+                          class="postFormTextarea"></textarea>
+            </td>
+        </tr>
+    </tbody>
+</table>
 <% end template %>
 
 <% template bannerHead() %>
