--- a/src/lib/static/css/post.css
+++ b/src/lib/static/css/post.css
@@ -31,6 +31,16 @@
     white-space: nowrap;
 }
 
+.postHeader > a > img {
+    opacity: 0.75;
+    filter: alpha(opacity=75);
+}
+
+.postHeader > a > img:hover {
+    opacity: 1;
+    filter: alpha(opacity=100);
+}
+
 .threadPost {
     horizontal-align: left;
 }
