--- a/src/lib/template/02_base_board.tmpl
+++ b/src/lib/template/02_base_board.tmpl
@@ -279,6 +279,8 @@
             <a name="banButton" href="javascript:banUser('<%= currentBoard.name %>', '<%= post.number %>');">
                 <img src="/<%= sitePathPrefix %>img/ban.png" title="<%= banUserText %>" /></a>
         <% end %>
+        <a href="javascript:complain();">
+            <img src="/<%= sitePathPrefix %>img/complain.png" title="<%= complainText %>" /></a>
         <a name="deleteButton" href="javascript:deletePost('<%= currentBoard.name %>', '<%= post.number %>', true);">
         <% if ( post.number == post.threadNumber ) %>
             <img src="/<%= sitePathPrefix %>img/delete.png" title="<%= deleteThreadText %>" /></a>
@@ -379,6 +381,7 @@
 <input type="hidden" id="enterPasswordTitle" value="<%= enterPasswordTitle %>" />
 <input type="hidden" id="ajaxErrorText" value="<%= ajaxErrorText %>" />
 <input type="hidden" id="notLoggedInText" value="<%= notLoggedInText %>" />
+<input type="hidden" id="complainMessage" value="<%= complainMessage %>" />
 <select id="availableBoardsSelect" class="select" style="display: none;">
     <%foreach board in availableBoards %>
         <% item %>
@@ -436,6 +439,8 @@
                 <input name="name" type="hidden" value="%rawName%" />
                 <input name="subject" type="hidden" value="%rawSubject%" />
             </span>
+            <a href="javascript:complain();">
+                <img src="/<%= sitePathPrefix %>img/complain.png" title="<%= complainText %>" /></a>
             <a name="deleteButton" href="javascript:deletePost('<%= currentBoard.name %>', '%postNumber%', true);">
                 <img src="/<%= sitePathPrefix %>img/delete.png" title="<%= deletePostText %>" /></a>
             <a id="hidePost%postNumber%" name="hideButton"
